--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "@types/react-dom": "^18.0.11",
     "axios": "^1.3.5",
     "chart.js": "^4.2.1",
+    "chartjs-adapter-date-fns": "^3.0.0",
+    "date-fns": "^2.30.0",
     "moment": "^2.29.4",
     "react": "^18.2.0",
     "react-chartjs-2": "^5.2.0",
